<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_news">Today News</string>
    <string name="popular_news">Popular News</string>
    <string name="bookmarked_news">Bookmarked News</string>
    <string name="news_app">NEWS APP</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="source">Source</string>
    <string name="published_at">Published At</string>
    <string name="description">Description</string>
    <string name="news_details">News Details</string>
    <string name="_0">0</string>
    <string name="bookmark">bookmark</string>
    <string name="bookmarked">bookmarked</string>
</resources>