<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.NewsDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_poster_detail"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_250dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_detail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_source_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/source"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_content_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_content_detail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_publish_at_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/published_at"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_content_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_content_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
